Prevent cover image from blurring in

--- a/src/components/cover.module.css
+++ b/src/components/cover.module.css
@@ -10,6 +10,7 @@
 }
 
 .image {
+  align-self: center;
   flex: 1;
   overflow: hidden;
 }
